[package]
name = "vban"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
byteorder = "1.4.3"
clap = { version = "4.1.8", features = ["derive"] }
cpal = "0.15.0"
dasp_sample = "0.11.0"
ringbuf = "0.3.2"
vban = { git = "https://github.com/maunolo/vban-rs" }

[profile.release]
strip = true # Automatically strip symbols from the binary
opt-level = "s" # Optimize for size
lto = true # Enable link time optimization
codegen-units = 1 # Maximize size reduction optimizations
