[package]
name = "claudio"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
cpal = { version = "0.15.0", features = ["jack"] }
rusty-vban = { version = "0.4.1" }

[profile.release]
strip = true      # Automatically strip symbols from the binary
opt-level = "s"   # Optimize for size
lto = true        # Enable link time optimization
codegen-units = 1 # Maximize size reduction optimizations
